# DevopsAgent

./: .gitignore  Dockerfile  README.md  architecture.md  inspect_a2a.py  main.py  pyproject.toml  start_services.sh  streamlit_agent_ui.py  supervisor_with_aws_agent.py  test_agent.py
agents/: aws.py  aws_mcp_agent.py  supervisor.py
core/: config.py  email_polling.py  server.py
ui/: app.py
